--- a/app/src/main/res/layout/activity_pregraph.xml
+++ b/app/src/main/res/layout/activity_pregraph.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
@@ -8,6 +8,10 @@
     android:background="#edecec"
     tools:context="PreGraph">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -26,6 +30,13 @@
         android:layout_marginTop="20dp"
         android:theme="@style/AppTheme" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Далее"
+            android:textColor="@android:color/background_dark" />
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
@@ -93,12 +104,20 @@
         android:textStyle="italic"
         android:visibility="invisible" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Далее"
-        android:textColor="@android:color/background_dark" />
+        <EditText
+            android:id="@+id/input4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
 
-</LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
